// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-block-lang.vue - {"plugins":[{"languages":[{"name":"uppercase-rocks","parsers":["uppercase-rocks"]}],"parsers":{"uppercase-rocks":{"astFormat":"uppercase-rocks"}},"printers":{"uppercase-rocks":{}}}]} format 1`] = `
====================================options=====================================
parsers: ["vue"]
plugins: [{"languages":[{"name":"uppercase-rocks","parsers":["uppercase-rocks"]}],"parsers":{"uppercase-rocks":{"astFormat":"uppercase-rocks"}},"printers":{"uppercase-rocks":{}}}]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<custom lang="uppercase-rocks">
hello,
world!
</custom>

=====================================output=====================================
<custom lang="uppercase-rocks">
HELLO,
WORLD!
</custom>

================================================================================
`;

exports[`script-lang.vue - {"plugins":[{"languages":[{"name":"uppercase-rocks","parsers":["uppercase-rocks"]}],"parsers":{"uppercase-rocks":{"astFormat":"uppercase-rocks"}},"printers":{"uppercase-rocks":{}}}]} format 1`] = `
====================================options=====================================
parsers: ["vue"]
plugins: [{"languages":[{"name":"uppercase-rocks","parsers":["uppercase-rocks"]}],"parsers":{"uppercase-rocks":{"astFormat":"uppercase-rocks"}},"printers":{"uppercase-rocks":{}}}]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script lang="uppercase-rocks">
hello,
world!
</script>

=====================================output=====================================
<script lang="uppercase-rocks">
hello,
world!
</script>

================================================================================
`;

exports[`style-lang.vue - {"plugins":[{"languages":[{"name":"uppercase-rocks","parsers":["uppercase-rocks"]}],"parsers":{"uppercase-rocks":{"astFormat":"uppercase-rocks"}},"printers":{"uppercase-rocks":{}}}]} format 1`] = `
====================================options=====================================
parsers: ["vue"]
plugins: [{"languages":[{"name":"uppercase-rocks","parsers":["uppercase-rocks"]}],"parsers":{"uppercase-rocks":{"astFormat":"uppercase-rocks"}},"printers":{"uppercase-rocks":{}}}]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<style lang="uppercase-rocks">
hello,
world!
</style>

=====================================output=====================================
<style lang="uppercase-rocks">
hello,
world!
</style>

================================================================================
`;

exports[`template-lang.vue - {"plugins":[{"languages":[{"name":"uppercase-rocks","parsers":["uppercase-rocks"]}],"parsers":{"uppercase-rocks":{"astFormat":"uppercase-rocks"}},"printers":{"uppercase-rocks":{}}}]} format 1`] = `
====================================options=====================================
parsers: ["vue"]
plugins: [{"languages":[{"name":"uppercase-rocks","parsers":["uppercase-rocks"]}],"parsers":{"uppercase-rocks":{"astFormat":"uppercase-rocks"}},"printers":{"uppercase-rocks":{}}}]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<template lang="uppercase-rocks">
hello,
world!
</template>

=====================================output=====================================
<template lang="uppercase-rocks">
HELLO,
WORLD!
</template>

================================================================================
`;
